fix: fixed header + hide map on mobile

--- a/assets/scss/sections/_contacts.scss
+++ b/assets/scss/sections/_contacts.scss
@@ -286,6 +286,7 @@
         height: 300px;
         border-radius: 20px;
         padding: 8px;
+        display: none;
 
         iframe {
             height: 100%;
